--- a/вопросы.md
+++ b/вопросы.md
@@ -2,3 +2,8 @@
 - ненумерованный раз
 - он же два
 - ну и пусть будет уж три
+
+Вот пусть тут будет уже нумерованный:
+1 нумеро уно
+2 нумбер два
+2 номер 3
