--- a/вопросы.md
+++ b/вопросы.md
@@ -7,3 +7,9 @@
 1 нумеро уно
 2 нумбер два
 2 номер 3
+
+Ага, значит просто я туплю в нотации, ладно, опять нумерованный:
+1. раз
+2. два
+3. три
+4. чипыри
